chest-system/chest-system-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: chest-system
  namespace: chest-system
spec: {}
status: {}
