chest-system/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose-resolved.yaml -o kube --namespace chest-system
    kompose.version: 1.30.0 (HEAD)
  labels:
    io.kompose.service: client
  name: client
  namespace: chest-system
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: client
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose-resolved.yaml -o kube --namespace chest-system
        kompose.version: 1.30.0 (HEAD)
      labels:
        io.kompose.network/chest-system-default: 'true'
        io.kompose.service: client
    spec:
      containers:
        - env:
            - name: NODE_ENV
              value: production
          image: skyface753/chest-system-client:latest
          name: client

          resources:
            limits:
              cpu: 500m
              memory: 500Mi
            requests:
              cpu: 100m
              memory: 100Mi
      restartPolicy: Always
status: {}
