chest-system/proxy-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose-resolved.yaml -o kube --namespace chest-system
    kompose.version: 1.30.0 (HEAD)
  labels:
    io.kompose.service: proxy
  name: proxy
  namespace: chest-system
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: proxy
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose-resolved.yaml -o kube --namespace chest-system
        kompose.version: 1.30.0 (HEAD)
      labels:
        io.kompose.network/chest-system-default: 'true'
        io.kompose.service: proxy
    spec:
      containers:
        - image: skyface753/chest-system-proxy:latest
          name: proxy
          ports:
            - containerPort: 80
              hostPort: 81
              protocol: TCP
          resources:
            limits:
              cpu: 500m
              memory: 500Mi
            requests:
              cpu: 100m
              memory: 100Mi
      restartPolicy: Always
status: {}
