chest-system/client-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose-resolved.yaml -o kube --namespace chest-system
    kompose.version: 1.30.0 (HEAD)
  labels:
    io.kompose.service: client
  name: client
  namespace: chest-system
spec:
  ports:
    - name: '3000'
      port: 3000
      targetPort: 3000
  selector:
    io.kompose.service: client
status:
  loadBalancer: {}
