chest-system/proxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: proxy
  name: chest-proxy-service
  namespace: chest-system
spec:
  ports:
    - name: 'web'
      port: 80
      targetPort: 80
  selector:
    io.kompose.service: proxy
status:
  loadBalancer: {}
